# Inevitable

./: Cargo.toml  README.md  config.yaml  pyproject.toml  visualization.py
src/: alloc_stats.rs  checked.rs  config.rs  game_state.rs  lib.rs  main.rs  pns.rs  threat_index.rs  ui.rs  utils.rs
src/game_state/: bitboard.rs  evaluation.rs  logic.rs  mod.rs  moves.rs  state.rs  threat_index.rs  zobrist.rs
src/game_state/bitboard/: core.rs  iter.rs  iterator.rs  neighborhood.rs  ops.rs  shift.rs  workspace.rs
src/game_state/threat_index/: buckets.rs  mod.rs  window.rs
src/pns/: context.rs  manager.rs  mod.rs  node.rs  search.rs  shared_tree.rs  solver.rs  stats_def.rs  tree.rs  tt.rs  worker_pool.rs
src/pns/manager/: accessors.rs  benchmark.rs  best_move.rs  deepening.rs  impls.rs  logging.rs  mod.rs  setup.rs  solve.rs  types.rs
src/pns/manager/logging/: mod.rs
src/pns/parallel/: context.rs  manager.rs  mod.rs  node.rs  selection.rs  shared_tree.rs  stats_def.rs  worker.rs
src/pns/parallel/manager/: logging.rs  metrics.rs  mod.rs  solve.rs
src/pns/parallel/manager/logging/: counters.rs  mod.rs  snapshot.rs
src/pns/parallel/shared_tree/: evaluation.rs  expansion.rs  mod.rs  stats.rs  tree.rs  update.rs
src/pns/shared_tree/: arena.rs  expansion.rs  frontier.rs  growth.rs  judgement.rs  mod.rs  resolution.rs  tree.rs
src/pns/solver/: evaluation.rs  expansion.rs  mod.rs  update.rs
src/ui/: input.rs
tool/: visualization.py
