[package]
name = "five_stone"
version = "0.0.0"
edition = "2024"

[dependencies]
rand = "*"
parking_lot = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
ctrlc = "*"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
